[package]
name = "optique"
version = "0.1.0"
authors = ["Pi Lanningham <pi.lanningham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
enum_dispatch = "0.3.4"
bumpalo = "3.4.0"
image = "0.23.12"
pbrt_rs = { git = "https://github.com/beltegeuse/pbrt_rs", commit = "7b409157" }
float_next_after = "0.1.5"